--- a/algorithmic_art_1_Infographics.html
+++ b/algorithmic_art_1_Infographics.html
@@ -192,10 +192,12 @@
 <body>
     <div class="container">
         <header>
-            <h1>Mathematical Creature: Parametric Life Form</h1>
-            <p>How mathematical equations create organic-looking forms and motion</p>
-        </header>
-        
+          <h1>Mathematical Creature: Parametric Life Form</h1>
+          <p>How mathematical equations create organic-looking forms and motion</p>
+          <p>
+            Click here to see <strong><a href="https://nbahador.github.io/algorithmic_art/algorithmic_art_1.html" target="_blank" rel="noopener noreferrer">live demo</a></strong>
+          </p>
+        </header>        
         <div class="visualization-container">
             <div class="canvas-wrapper">
                 <canvas id="creatureCanvas"></canvas>
@@ -334,7 +336,7 @@
         </div>
         
         <div class="citation">
-            <p>Creative concept/idea by @yuruyurau | Live interactive demo</p>
+          <p>This work draws inspiration from the artistic works of <a href="https://twitter.com/yuruyurau" target="_blank" rel="noopener noreferrer">@yuruyurau</a>.</p>
         </div>
     </div>
 
